FIX TopBarWidget - fix a bug that the checkout service was not affected properly

--- a/resources/views/Widgets/Header/TopBarWidget.twig
+++ b/resources/views/Widgets/Header/TopBarWidget.twig
@@ -190,7 +190,7 @@
                 <shop-country-settings
                         country-flag-prefix="flag-icon-"
                         :shipping-countries="{{ Twig.print('services.country.getActiveCountriesList() | filterFields(["id", "currLangName", "isoCode2", "states.id", "states.name"]) | json_encode') }}"
-                        :shipping-country-id="{{ Twig.call('services.checkout.getShippingCountryId') }}">
+                        :shipping-country-id="{{ Twig.print('services.checkout.getShippingCountryId | json_encode') }}">
                     <div id="countrySettings" class="row cmp cmp-country-settings no-margin collapse">
                         <div class="container-max">
                             <div class="row no-padding">
