--- a/resources/views/Homepage/MarketingHomepage.twig
+++ b/resources/views/Homepage/MarketingHomepage.twig
@@ -1,5 +1,4 @@
-{% set currentLang = services.sessionStorage.getLang() %}
-{% set homepageJson = getExternalContent("https://cdn02.plentymarkets.com/pmsbpnokwu6a/plugin/production/marketingresource/js/HomepageContent.json") %}
-{% set homepageData = homepageJson[currentLang] %}
 
+<div>
 Herzlich Willkommen
+</div>
