--- a/resources/views/Homepage/MarketingHomepage.twig
+++ b/resources/views/Homepage/MarketingHomepage.twig
@@ -1,4 +1,62 @@
+{% set currentLang = services.sessionStorage.getLang() %}
+{% set homepageJson = getExternalContent("https://cdn02.plentymarkets.com/pmsbpnokwu6a/plugin/production/marketingresource/js/HomepageContent.json") %}
+{% set homepageData = homepageJson[currentLang] %}
 
-<div>
-Herzlich Willkommen
+<div class="container-max mkt-homepage">
+    <div class="carousel slide" data-interval="5000" data-ride="carousel" id="carousel-example">
+        <div class="carousel-inner" id="carousel-content">
+            {% for picture in homepageData.pictures %}
+                <div class="carousel-item text-muted {% if loop.first %}active{% endif %}">
+                    <a href="{{ picture.pictureLink }}">
+                        <img class="img-fluid" src="{{ picture.pictureUrl }}" />
+                    </a>
+                    <div class="carousel-caption">
+                        <h2>{% autoescape false %}{{ picture.text }}{% endautoescape %}</h2>
+                    </div>
+                </div>
+            {% endfor %}
+        </div>
+        <a class="left carousel-control" href="#carousel-example" data-slide="prev"><i
+                    class="icon-prev  fa fa-angle-left"></i></a>
+        <a class="right carousel-control" href="#carousel-example" data-slide="next"><i
+                    class="icon-next fa fa-angle-right"></i></a>
+    </div>
+
+    <div class="row">
+        <div class="col-lg-6">
+            <h1 id="welcome-text">{% autoescape false %}{{ homepageData.texts.welcome }}{% endautoescape %}</h1>
+        </div>
+        <div class="col-lg-6">
+            <p id="short-description">{% autoescape false %}{{ homepageData.texts.shortDescription }}{% endautoescape %}</p>
+        </div>
+    </div>
+
+    <hr class="my-2">
+
+    <div class="row">
+        <div class="col-lg-12">
+            <h2 id="recommend-text">{% autoescape false %}{{ homepageData.texts.recommendText }}{% endautoescape %}</h2>
+        </div>
+    </div>
+
+    <hr class="my-2">
+
+    <div class="row">
+        <div class="row mt-xs-0_5">
+            <ul class="flex-container" id="recommended-plugins">
+                {% for plugin in homepageData.recommended | shuffle %}
+                    <li class="flex-item">
+                        <a rel="noopener noreferrer" target="_blank" href="{{ plugin.pluginLink }}">
+                            <img class="flex-image" src="{{ plugin.pluginIcon }}" />
+                            <div class="flex-align-bottom">
+                                <h1 class="flex-title">{% autoescape false %}{{ plugin.pluginTitle }}{% endautoescape %}</h1>
+                                <div class="flex-text">{% autoescape false %}{{ plugin.pluginText }}{% endautoescape %}</div>
+                            </div>
+                        </a>
+                    </li>
+                {% endfor %}
+            </ul>
+        </div>
+    </div>
 </div>
+
