--- a/resources/views/Item/Components/SingleItem.twig
+++ b/resources/views/Item/Components/SingleItem.twig
@@ -64,7 +64,9 @@
                             </del>
                         </div>
                     {% endif %}
-<!--
+{% if $CustomerClass == 1 %}
+
+
                     <span class="price h1">
                         <span ref="variationTotalPrice" :content="currentVariation.prices.default.price.value">
                             ${ variationTotalPrice | currency(currentVariation.prices.default.currency) }
@@ -73,7 +75,7 @@
                         <span :content="currentVariation.prices.default.currency"></span>
                     </span>
                     
-                    -->
+               
 
                     <div class="base-price text-muted m-y-1" v-if="currentVariation.unit">
                         <div>
@@ -108,6 +110,16 @@
                                 :is-variation-selected="isVariationSelected"></add-to-basket>
                         <slot name="AfterAddToBasket"></slot>
                     </div>
+                    
+               
+
+{% else %}
+
+Melden Sie sich bitte bei uns an und Sie werden in den nächsten 24 Stunden für den Webshop freigeschaltet
+
+{% endif %}
+                    
+                    
 
                     {% if "wish-list" in enabledRoutes or "all" in enabledRoutes %}
                         <div class="row">
