--- a/resources/views/Item/Components/SingleItem.twig
+++ b/resources/views/Item/Components/SingleItem.twig
@@ -65,7 +65,7 @@
                         </div>
                     {% endif %}
                     
-{% if $CustomerClass == 1 %}
+{% if $CustomerID > 0 %}
 <span class="price h1">
                         <span ref="variationTotalPrice" :content="currentVariation.prices.default.price.value">
                             ${ variationTotalPrice | currency(currentVariation.prices.default.currency) }
