--- a/resources/views/Item/Components/SingleItem.twig
+++ b/resources/views/Item/Components/SingleItem.twig
@@ -67,7 +67,7 @@
                     
 
 
-{% if $CustomerID > 0 %}
+{% if frontend.Account.getIsAccountLoggedIn %}
 <span class="price h1">
                         <span ref="variationTotalPrice" :content="currentVariation.prices.default.price.value">
                             ${ variationTotalPrice | currency(currentVariation.prices.default.currency) }
