--- a/resources/views/PageDesign/Partials/Footer.twig
+++ b/resources/views/PageDesign/Partials/Footer.twig
@@ -22,20 +22,30 @@
     {% if numberOfFeatures > 0 %}
         <div class="footer-features p-y-1 container-max">
             <div class="row">
-                {% for i in 1..numberOfFeatures %}
+               
                     <div class="col-xs-12 col-sm-4 text-xs-center">
                         <i class="fa fa-check text-success" aria-hidden="true"></i>
                        <!-- {{ trans('Ceres::Template.footerStoreFeature' ~ i) }} -->
-                       Alles auf Lager - Schnelle Lieferung - 24 Stunden Verfügbarkeit
+                       Alles auf Lager
                     </div>
-                {% endfor %}
+                     <div class="col-xs-12 col-sm-4 text-xs-center">
+                        <i class="fa fa-check text-success" aria-hidden="true"></i>
+                       <!-- {{ trans('Ceres::Template.footerStoreFeature' ~ i) }} -->
+                       Schnelle Lieferung
+                    </div>
+                     <div class="col-xs-12 col-sm-4 text-xs-center">
+                        <i class="fa fa-check text-success" aria-hidden="true"></i>
+                       <!-- {{ trans('Ceres::Template.footerStoreFeature' ~ i) }} -->
+                       24 Stunden Verfügbarkeit
+                    </div>
+               
             </div>
         </div>
     {% endif %}
 
 
-    <div class="container-max footer-content hidden">
-        <div class="row">
+    <div class="container-max footer-content">
+        <div class="row hidden">
             <div class="col-xs-12">
                 <div class="footer-services m-t-2">
                     {% set paymentMethodContent = LayoutContainer.show("Ceres::Homepage.PaymentMethods") %}
