--- a/resources/views/PageDesign/Partials/Footer.twig
+++ b/resources/views/PageDesign/Partials/Footer.twig
@@ -73,7 +73,7 @@
             </div>
         </div>
         
-        <div class="row">
+        <div class="row hidden">
             <hr class="m-y-2">
             {% for i in 1..numberOfCols %}
                 <div class="col-xs-6 col-sm-3 col-lg-2">
