--- a/resources/views/PageDesign/Partials/Footer.twig
+++ b/resources/views/PageDesign/Partials/Footer.twig
@@ -101,12 +101,12 @@
                 </div>
             {% endfor %}
             <hr class="hidden-sm-up m-y-2 hidden">
-            <div class="col-xs-6 col-sm-3">
+            <div class="col-xs-6 col-sm-3 hidden ">
                 <div class="footer-column">
                     {{ LayoutContainer.show("Ceres::Footer.RowOne") }}
                 </div>
             </div>
-            <div class="col-xs-12 col-sm-3">
+            <div class="col-xs-12 col-sm-3 hidden">
                 <div class="footer-column row">
                     {% set rowTwo = LayoutContainer.show("Ceres::Footer.RowTwo") %}
                     
