--- a/resources/views/Item/Components/VariationSelect.twig
+++ b/resources/views/Item/Components/VariationSelect.twig
@@ -15,17 +15,17 @@
             </div>
         </div>
 
-        <div class="col-xs-12 col-md-6 col-lg-4 variation-select" v-for="(unit, unitId) in variationUnits" v-if="possibleUnitIds.length > 0">
-            <div class="input-unit" ref="labelBoxRef">
+        <div class="col-xs-12 col-md-6 col-lg-4 variation-select" v-if="possibleUnitIds.length > 0">
+            <div class="input-unit">
                 <select class="custom-select text-gray-dark" v-model="selectedUnitId" @change="onSelectionChange(possibleUnitIds[selectedUnitId])">
-                    <option :value="null">{{ trans("Ceres::Template.singleItemPleaseSelect") }}</option>
+                    <option :value="0">{{ trans("Ceres::Template.singleItemPleaseSelect") }}</option>
                     <option
                             v-for="unitCombinationId in possibleUnitIds"
                             :value="unitCombinationId">
-                        ${ variationUnits[unitId]["values"][unitCombinationId] }
+                        ${ variationUnits[unitCombinationId] }
                     </option>
                 </select>
-                <label v-tooltip="isTextCut(unit.name)" data-toggle="tooltip" data-placement="top" title="unit.name">${ unit.name }</label>
+                <label v-tooltip data-toggle="tooltip" data-placement="top" title="Einheit">Einheit</label>
             </div>
         </div>
     </div>
