--- a/resources/views/PageDesign/Partials/Header/DefaultHeader.twig
+++ b/resources/views/PageDesign/Partials/Header/DefaultHeader.twig
@@ -1,10 +1,15 @@
 <header id="page-header" class="top-bar pos-f-t">
     <div>
         <div class="container-max">
-            <div class="row">
+            <div class="row" style="background-color:#000000;color:#ffffff;" >
                 {{ LayoutContainer.show("Ceres::Header.LeftSide") }}
 
                 <ul id="controlsList" class="controls-list list-inline">
+                
+                
+                <li>
+                Alles auf Lager |  Schnelle Lieferung | 24 Stunden Verfügbarkeit 
+                </li>
 
                     <li class="list-inline-item control-user">
                         <user-login-handler>
