--- a/resources/views/PageDesign/Partials/Header/DefaultHeader.twig
+++ b/resources/views/PageDesign/Partials/Header/DefaultHeader.twig
@@ -7,8 +7,8 @@
                 <ul id="controlsList" class="controls-list list-inline">
                 
                 
-                <li>
-                Alles auf Lager |  Schnelle Lieferung | 24 Stunden Verfügbarkeit 
+                <li><div class="hidden-xs" align="left;width:800px;">
+                Alles auf Lager |  Schnelle Lieferung | 24 Stunden Verfügbarkeit </div>
                 </li>
 
                     <li class="list-inline-item control-user">
