--- a/resources/views/Item/Components/VariationSelect.twig
+++ b/resources/views/Item/Components/VariationSelect.twig
@@ -25,7 +25,7 @@
                         ${ variationUnits[unitCombinationId] }
                     </option>
                 </select>
-                <label v-tooltip data-toggle="tooltip" data-placement="top" title="Einheit">Einheit</label>
+                <label v-tooltip data-toggle="tooltip" data-placement="top" title="{{ trans("Ceres::Template.singleItemContent") }}">{{ trans("Ceres::Template.singleItemContent") }}</label>
             </div>
         </div>
     </div>
