--- a/resources/views/Category/Item/CategoryItem.twig
+++ b/resources/views/Category/Item/CategoryItem.twig
@@ -18,13 +18,19 @@
 
     {% set shippingCat = config("Ceres.global.shippingCostsCategoryId") %}
 
+    {% set categoryDescriptionTop = ceresConfig.item.showCategoryDescriptionTop %}
+    {% set categoryDescriptionBottom = ceresConfig.item.showCategoryDescriptionBottom %}
+
     <div class="categoriegrid page-content container-max">
         {% if not ceresConfig.item.showCategoryImage %}
             <div class="row m-t-1">
                 <div class="col-xs-12">
                     <h1 class="h2 category-title">{{ category.details[0].name }}</h1>
-                    {% if ceresConfig.item.showCategoryDescription %}
-                        <div id="category-description-container" class="category-description m-b-1">{{ category.details[0].description | raw }}</div>
+                    {% if categoryDescriptionTop == "description1" or categoryDescriptionTop == "both" %}
+                        <div class="category-description m-b-1" data-category-description="1">{{ category.details[0].description | raw }}</div>
+                    {% endif %}
+                    {% if categoryDescriptionTop == "description2" or categoryDescriptionTop == "both" %}
+                        <div class="category-description m-b-1" data-category-description="2">{{ category.details[0].description2 | raw }}</div>
                     {% endif %}
                 </div>
             </div>
@@ -112,6 +118,15 @@
                 </div>
             </div>
         {% endif %}
+
+        <div class="col-xs-12">
+            {% if categoryDescriptionBottom == "description1" or categoryDescriptionBottom == "both" %}
+                <div class="category-description m-b-1" data-category-description="1">{{ category.details[0].description | raw }}</div>
+            {% endif %}
+            {% if categoryDescriptionBottom == "description2" or categoryDescriptionBottom == "both" %}
+                <div class="category-description m-b-1" data-category-description="2">{{ category.details[0].description2 | raw }}</div>
+            {% endif %}
+        </div>
     </div>
 
 {% endblock %}
