--- a/resources/views/Category/Item/Partials/CategoryParallaxImage.twig
+++ b/resources/views/Category/Item/Partials/CategoryParallaxImage.twig
@@ -1,12 +1,16 @@
+{% set categoryDescriptionTop = ceresConfig.item.showCategoryDescriptionTop %}
+
 <div class="parallax-img-container"{% if category.details[0].imagePath is not empty %} style="background-image: url(/documents/{{ category.details[0].imagePath }});"{% endif %}>
     <div class="container-max">
         <div class="parallax-text-wrapper">
             <div class="parallax-text-container">
                 <h1 class="h2 p-t-2 category-title">{{ category.details[0].name | raw }}</h1>
-
-                {% if ceresConfig.item.showCategoryDescription %}
-                    <div id="category-description-container" class="category-description m-b-1">{{ category.details[0].description | raw }}</div>
-                {% endif %}
+                    {% if categoryDescriptionTop == "description1" or categoryDescriptionTop == "both" %}
+                        <div class="category-description m-b-1" data-category-description="1">{{ category.details[0].description | raw }}</div>
+                    {% endif %}
+                    {% if categoryDescriptionTop == "description2" or categoryDescriptionTop == "both" %}
+                        <div class="category-description m-b-1" data-category-description="2">{{ category.details[0].description2 | raw }}</div>
+                    {% endif %}
             </div>
         </div>
     </div>
