--- a/resources/scss/ceres/widgets/_widgets.scss
+++ b/resources/scss/ceres/widgets/_widgets.scss
@@ -6,6 +6,7 @@
 @import "Common/image-carousel-widget";
 @import "Common/item-list-widget";
 @import "Common/title-bar-widget";
+@import "Common/newsletter-widget";
 @import "Common/text-widget";
 @import "Common/list-widget";
 @import "Common/link-list-widget";
