--- a/resources/views/Widgets/Common/NewsletterWidget.twig
+++ b/resources/views/Widgets/Common/NewsletterWidget.twig
@@ -6,7 +6,7 @@
 {% set showNameInputs = widget.settings.showNameInputs.mobile | json_encode %}
 {% set showPrivacyPolicyCheckbox = widget.settings.showPrivacyPolicyCheckbox.mobile | json_encode %}
 
-<div class="widget">
+<div class="widget-newsletter widget">
     <div class="widget-inner">
         <newsletter-input appearance="{{ appearance }}" :title="{{ title }}" :sub-title="{{ subTitle }}" :show-name-inputs="{{ showNameInputs }}" :show-privacy-policy-checkbox="{{ showPrivacyPolicyCheckbox }}"></newsletter-input>
     </div>
