CHANGE _item-list-widget.scss - remove padding-left/right for grids

--- a/resources/scss/ceres/widgets/Common/_item-list-widget.scss
+++ b/resources/scss/ceres/widgets/Common/_item-list-widget.scss
@@ -1,5 +1,16 @@
 .widget-item-list
 {
+    .widget-inner
+    {
+        padding-left: 0;
+        padding-right: 0;
+
+        > .row
+        {
+            width: 100%;
+        }
+    }
+
     .widget-caption
     {
         padding: 1rem 1.5rem;
@@ -19,11 +30,6 @@
         {
             color: #fff;
         }
-    }
-
-    &.widget-inner > .row
-    {
-        width: 100%;
     }
 
     &.widget-primary .widget-caption
