--- a/resources/views/Newsletter/Components/NewsletterInput.twig
+++ b/resources/views/Newsletter/Components/NewsletterInput.twig
@@ -1,5 +1,5 @@
 <script type="x/template" id="vue-newsletter-input">
-        <form id="newsletter-input-form">
+        <form :id="'newsletter-input-form_' + _uid">
             <div class="row">
                 <div class="col-xs-12" v-if="title">
                     <span class="h1">${ title }</span>
@@ -12,29 +12,29 @@
             <div class="row">
                 <div class="col-xs-6" v-if="showNameInputs">
                     <div class="input-unit">
-                        <label for="first-name-input">{{ trans("Ceres::Template.newsletterFirstName") }}</label>
-                        <input type="text" id="first-name-input" v-model="firstName">
+                        <label :for="'first-name-input_' + _uid">{{ trans("Ceres::Template.newsletterFirstName") }}</label>
+                        <input type="text" :id="'first-name-input_' + _uid" v-model="firstName">
                     </div>
                 </div>
                 <div class="col-xs-6 p-l-0" v-if="showNameInputs">
                     <div class="input-unit">
-                        <label for="last-name-input">{{ trans("Ceres::Template.newsletterLastName") }}</label>
-                        <input type="text" id="last-name-input" v-model="lastName">
+                        <label :for="'last-name-input_' + _uid">{{ trans("Ceres::Template.newsletterLastName") }}</label>
+                        <input type="text" :id="'last-name-input_' + _uid" v-model="lastName">
                     </div>
                 </div>
 
                 <div class="col-xs-12">
                     <div class="input-group">
                         <div class="input-unit" data-validate="mail">
-                            <label for="email-input-id">{{ trans("Ceres::Template.newsletterEmail") }} *</label>
-                            <input type="email" id="email-input-id" v-model="email">
+                            <label :for="'email-input-id_' + _uid">{{ trans("Ceres::Template.newsletterEmail") }} *</label>
+                            <input type="email" :id="'email-input-id_' + _uid" v-model="email">
                         </div>
                     </div>
                 </div>
 
                 <div class="col-xs-12" v-if="showPrivacyPolicyCheckbox">
-                    <label for="privacy-policy-accept-id" class="form-check-label" data-validate>
-                        <input type="checkbox" class="form-check-input" id="privacy-policy-accept-id" name="privacy-policy-accept" v-model="privacyPolicyValue">
+                    <label :for="'privacy-policy-accept-id_' + _uid" class="form-check-label" data-validate>
+                        <input type="checkbox" class="form-check-input" :id="'privacy-policy-accept-id_' + _uid" name="privacy-policy-accept" v-model="privacyPolicyValue">
                         <small>
                             {% autoescape false %}
                                 {% set policyContent %}<!--
@@ -50,10 +50,10 @@
 
                 <div class="col-xs-12 m-t-1">
                         <div class="input-group-btn">
-                        <button type="button" class="btn btn-block" :class="'btn-' + appearance" @click="validateData" :disabled="isDisabled">
-                            <i v-waiting-animation="isDisabled" class="fa fa-paper-plane-o" aria-hidden="true"></i>
-                            {{ trans('Ceres::Template.newsletterSubscribeButtonLabel') }}
-                        </button>
+                            <button type="button" class="btn btn-block" :class="'btn-' + appearance" @click="validateData" :disabled="isDisabled">
+                                <i v-waiting-animation="isDisabled" class="fa fa-paper-plane-o" aria-hidden="true"></i>
+                                {{ trans('Ceres::Template.newsletterSubscribeButtonLabel') }}
+                            </button>
                         </div>
                 </div>
 
