CHANGE LegalInformationWidget - remove class static-link-list: this class made problems with scrolling in firefox, when widget is placed at the bottom

--- a/resources/scss/ceres/widgets/_widgets.scss
+++ b/resources/scss/ceres/widgets/_widgets.scss
@@ -5,6 +5,7 @@
 @import "Common/image-box-widget";
 @import "Common/image-carousel-widget";
 @import "Common/item-list-widget";
+@import "Common/legal-information-widget";
 @import "Common/title-bar-widget";
 @import "Common/newsletter-widget";
 @import "Common/text-widget";
