--- a/resources/views/Widgets/Footer/LegalInformationWidget.twig
+++ b/resources/views/Widgets/Footer/LegalInformationWidget.twig
@@ -8,8 +8,8 @@
     cancellationPdfPath: widget.settings.cancellationFormContainer.cancellationPdfPath.mobile
 } %}
 
-<div class="text-xs-center m-y-1">
-    <div class="static-link-list">
+<div class="widget-legal-information text-xs-center m-y-1">
+    <div>
         {% autoescape false %}
 
             {% if configuration.showCancellationRights %}
