CHANGE _popper.scss - add rule for safari browsers

--- a/resources/scss/ceres/components/_popper.scss
+++ b/resources/scss/ceres/components/_popper.scss
@@ -1,3 +1,13 @@
+html.safari {
+	.popper {
+		display: none;
+	}
+
+	.popper-visible {
+		display: block;
+	}
+}
+
 .popper {
 	max-width: $popover-max-width;
     padding: $popover-inner-padding;
