--- a/resources/scss/ceres/views/PageDesign/_navigation.scss
+++ b/resources/scss/ceres/views/PageDesign/_navigation.scss
@@ -149,6 +149,10 @@ body.menu-is-visible {
 						transform: rotateX(180deg);
 					}
 				}
+
+				& li.level2 {
+					break-inside: avoid;
+				}
 			}
 			/*&.ddown>a:after {
 				border 			: none;
