--- a/resources/views/Item/Components/SingleItem.twig
+++ b/resources/views/Item/Components/SingleItem.twig
@@ -69,7 +69,7 @@
 
                     <span class="price h1">
                         <span ref="variationTotalPrice" :content="currentVariation.prices.default.price.value">
-                            ${ variationTotalPrice | currency(currentVariation.prices.default.currency) }
+                            ${ variationTotalPrice | itemPrice(currentVariation.prices, "specialOffer") | currency(currentVariation.prices.default.currency) }
                         </span>
                         <sup>*</sup>
                         <span :content="currentVariation.prices.default.currency"></span>
