add twig item list special offer price

--- a/resources/views/Category/Item/Partials/CategoryListItem.twig
+++ b/resources/views/Category/Item/Partials/CategoryListItem.twig
@@ -107,7 +107,7 @@
                     {% endif %}
 
                     <div class="price">
-                        {{ item.data.prices.default.unitPrice.formatted }} * TEST
+                        {{ item.data.prices.default.unitPrice.formatted | specialOffer(item.data.prices, "unitPrice", "formatted") }} *
                     </div>
                 </div>
 
