--- a/resources/views/Checkout/OrderConfirmation.twig
+++ b/resources/views/Checkout/OrderConfirmation.twig
@@ -19,6 +19,10 @@
                 <div class="col-xs-12">
                     <h1 class="h2">{{ trans("Ceres::Template.orderConfirmationThanks") }}</h1>
                     <p>{{ trans("Ceres::Template.orderConfirmationWillBeProcessed") }}</p>
+                    {% set ContentAfterConfirmationText = LayoutContainer.show("OrderConfirmation.ContentAfterConfirmationText", data) %}
+                    {% if ContentAfterConfirmationText|trim is not empty %}
+                      {{ ContentAfterConfirmationText }}
+                    {% endif %}
                 </div>
             </div>
 
