CHANGE _navigation.scss - add min-height if the navigation is empty

--- a/resources/scss/ceres/views/PageDesign/_navigation.scss
+++ b/resources/scss/ceres/views/PageDesign/_navigation.scss
@@ -107,6 +107,10 @@ body.menu-is-visible {
 		padding 	: 0;
 		position 	: relative;
 
+		&:empty {
+			min-height: calc(#{ $line-height-base }rem + 1.3rem * 2);
+		}
+
 		li 	{
 			width : 100%;
 			cursor: pointer;
