--- a/resources/scss/ceres/views/PageDesign/_navigation.scss
+++ b/resources/scss/ceres/views/PageDesign/_navigation.scss
@@ -35,6 +35,8 @@ $menu-font-s-lg  		: 1em;
 $menu-font-f-lg  		: $font-family-serif;
 $menu-li-bg-hover		: $brand-primary;
 $menu-li-color-hover	: $white;
+$menu-li-padding-x      : 1rem;
+$menu-li-padding-y      : 1.3rem;
 // bigmenu
 $menu-big-menu-bg 				: darken($brand-primary,10%);
 $menu-big-menu-li-bg			: transparent;
@@ -108,7 +110,7 @@ body.menu-is-visible {
 		position 	: relative;
 
 		&:empty {
-			min-height: calc(#{ $line-height-base }rem + 1.3rem * 2);
+			min-height: $line-height-base + $menu-li-padding-y * 2;
 		}
 
 		li 	{
@@ -200,7 +202,7 @@ body.menu-is-visible {
 				position: relative;
 				transition: all 300ms;
 				>a {
-					padding: 1.3rem 1rem;
+					padding: $menu-li-padding-y $menu-li-padding-x;
 					width:100%;
 				}
 				>ul {
